contrast error fixed

--- a/todo_list/sass/_base.scss
+++ b/todo_list/sass/_base.scss
@@ -4,7 +4,7 @@ $container-bgcolor: #f2f2f2;
 $container-bordercolor: #000;
 $textbox-bordercolor: lightgray;
 $button-textcolor: #fff;
-$add-button-color: #4caf50;
+$add-button-color: #2B5F2C;
 $clear-button-color: #9f6060;
 $filter-colors: #88b2bcab;
 
