--- a/todo_list/sass/style.css
+++ b/todo_list/sass/style.css
@@ -94,7 +94,7 @@ section {
 
 .newItemEntry form button {
   font-size: 1.25rem;
-  background-color: #4caf50;
+  background-color: #2B5F2C;
   padding: 0.75rem;
 }
 
